Refactor response parsing in BmtcApiClientImpl and improve exception handling